--- a/views/Contact.html
+++ b/views/Contact.html
@@ -12,7 +12,7 @@
   <title>Contact</title>
 </head>
 <body>
-  <div class="form">
+  <div class="container-lg">
     <form>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
