--- a/views/References.html
+++ b/views/References.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/css/references.css" />
+  <title>References</title>
+</head>
+
+<body>
+
+  <div class="container-lg">
+    <div class="row p-2 align-items-center">
+      <div class="col">
+        <img src="../assets/img/ref-logo/lh-web-design.webp" class="img-ref img-thumbnail" alt="Agence Web">
+      </div>
+      <div class="col-10">
+        <a href="https://lhwebdesign.com/">
+          <h4>Agence Web</h4>
+        </a>
+        <p>Que vous soyez un(e) auto-entrepreneur, une PME ou un grand groupe, notre équipe aura toujours à cœur de vous
+          accompagner dans vos projets de A à Z ! Faire de vos projets une réussite est notre priorité ! Notre valeur
+          ajoutée est vraiment notre accompagnement et notre vision business lors du développement de votre site. </p>
+
+      </div>
+
+    </div>
+    <div class="row p-2">
+      <div class="col">
+        <img src="../assets/img/ref-logo/digibase-web.png" class="img-ref img-thumbnail" alt="Digibase Web">
+      </div>
+      <div class="col-10">
+        <a href="https://www.digibase-web.fr/">
+          <h4>Digibase Web</h4>
+        </a>
+        <p>Nous sommes convaincus qu’une transformation digitale réussie est celle qui met l’humain au centre de toute
+          réflexion et action. Toujours orientés résultat et qualité, notre mission sera de mettre les outils du
+          numériques à votre portée afin d’accompagner votre croissance et préparer l’avenir de votre entreprise. Nous
+          nous sommes dotés de partenaires qualifiés et expérimentés afin d’assurer des prestations de haute qualité
+          pour vous fournir un résultat à la hauteur de vos espérances. </p>
+      </div>
+    </div>
+    <div class="row p-2">
+      <div class="col">
+        <img src="../assets/img/ref-logo/auxioma.png" class="img-ref img-thumbnail" alt="Auxioma">
+      </div>
+      <div class="col-10">
+        <a href="https://auxioma.eu/">
+          <h4>Auxioma</h4>
+          <p>Auxioma : Nos web designer en france, en guadeloupe et martinique son des artistes très créatifs pour des
+            réalisations uniques. L'empreinte du Web : La passion est une qualité de nos développeurs pour donner vie à
+            vos projets. Une agence locale en Normandie : Le manager de votre projet sera vos unique interlocuteur pour
+            toutes les étapes de réalisation.</p>
+        </a>
+      </div>
+    </div>
+    <div class="row p-2">
+      <div class="col">
+        <img src="../assets/img/ref-logo/cocktail-numerique.svg" class="img-ref img-thumbnail cocktail"
+          alt="Cocktail Numérique">
+      </div>
+      <div class="col">
+        <a href="https://cocktail-numerique.fr/">Cocktail Numérique</a>
+      </div>
+    </div>
+    <div class="row p-2">
+      <div class="col">
+        <img src="../assets/img/ref-logo/fabiennail.png" class="img-ref img-thumbnail"
+          alt="Fabien Nail Studio Graphique">
+      </div>
+      <div class="col">
+        <a href="https://www.fabiennail.com/">Fabien Nail Studio Graphique</a>
+      </div>
+    </div>
+  </div>
+
+</body>
+
 </html>
