--- a/views/References.html
+++ b/views/References.html
@@ -29,7 +29,7 @@
       </div>
 
     </div>
-    <div class="row p-2">
+    <div class="row p-2 align-items-center">
       <div class="col">
         <img src="../assets/img/ref-logo/digibase-web.png" class="img-ref img-thumbnail" alt="Digibase Web">
       </div>
@@ -44,36 +44,48 @@
           pour vous fournir un résultat à la hauteur de vos espérances. </p>
       </div>
     </div>
-    <div class="row p-2">
+    <div class="row p-2 align-items-center">
       <div class="col">
         <img src="../assets/img/ref-logo/auxioma.png" class="img-ref img-thumbnail" alt="Auxioma">
       </div>
       <div class="col-10">
         <a href="https://auxioma.eu/">
           <h4>Auxioma</h4>
-          <p>Auxioma : Nos web designer en france, en guadeloupe et martinique son des artistes très créatifs pour des
-            réalisations uniques. L'empreinte du Web : La passion est une qualité de nos développeurs pour donner vie à
-            vos projets. Une agence locale en Normandie : Le manager de votre projet sera vos unique interlocuteur pour
-            toutes les étapes de réalisation.</p>
         </a>
+        <p>Auxioma : Nos web designer en france, en guadeloupe et martinique son des artistes très créatifs pour des
+          réalisations uniques. L'empreinte du Web : La passion est une qualité de nos développeurs pour donner vie à
+          vos projets. Une agence locale en Normandie : Le manager de votre projet sera vos unique interlocuteur pour
+          toutes les étapes de réalisation.</p>
+
       </div>
     </div>
-    <div class="row p-2">
+    <div class="row p-2 align-items-center">
       <div class="col">
         <img src="../assets/img/ref-logo/cocktail-numerique.svg" class="img-ref img-thumbnail cocktail"
           alt="Cocktail Numérique">
       </div>
-      <div class="col">
-        <a href="https://cocktail-numerique.fr/">Cocktail Numérique</a>
+      <div class="col-10">
+        <a href="https://cocktail-numerique.fr/">
+          <h4>Cocktail Numérique</h4>
+        </a>
+        <p>Cocktail Numérique est une agence de communication et conseil en web au Havre, qui propose des formations sur
+          le numérique et collabore avec un réseau étoffé de partenaires indépendants au sein d’un même espace de
+          coworking. Ensemble, nous aidons les entreprises et commerçants à s’épanouir dans leur activité grâce à la
+          création de contenu digital qui leur ressemble et à une meilleure visibilité sur le web.</p>
       </div>
     </div>
-    <div class="row p-2">
+    <div class="row p-2 align-items-center">
       <div class="col">
         <img src="../assets/img/ref-logo/fabiennail.png" class="img-ref img-thumbnail"
           alt="Fabien Nail Studio Graphique">
       </div>
-      <div class="col">
-        <a href="https://www.fabiennail.com/">Fabien Nail Studio Graphique</a>
+      <div class="col-10">
+        <a href="https://www.fabiennail.com/">
+          <h4>Fabien Nail Studio Graphique</h4>
+        </a>
+        <p>Graphiste et illustrateur basé au Havre, j’accompagne les entreprises, agences et collectivités dans leur
+          communication visuelle, en créant leur identité graphique (logo, charte), leurs supports (print, web et
+          mobile) et les illustrations dont ils ont besoin pour leurs affiches et événements.</p>
       </div>
     </div>
   </div>
