--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
     width: auto;
     margin: 0 auto;
 }
-
 .nav-link{
     color: white;
 }
@@ -17,4 +16,21 @@
 li{
     display: flex;
     justify-content: space-between;
+}
+.burger{
+    margin: auto 0;
+}
+#logo2{
+    height: 10rem;
+    width: auto;
+    margin: 0 auto;
+}
+.navbar{
+    background-color: #44A33D ;
+}
+#fondafpa{
+    background-color: #44A33D;
+}
+#navbarNav{
+    background-color: red;
 }
