--- a/views/References.html
+++ b/views/References.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/references.css" />
@@ -12,7 +19,37 @@
 </head>
 
 <body>
-
+  <!-- HEADER -->
+  <div id="fondafpa">
+    <img href="index.html" id="logo2" class="d-lg-none d-sm-block" src="../assets/img/logo-afpa.webp" />
+  </div>
+  <nav class="navbar navbar-expand-lg barredenav">
+    <div class="container-fluid text-center">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler border border-3 collapsed" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="bi bi-list fs-2"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="container-fluid navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link d-lg-block d-sm-none" aria-current="page" href="#">
+              <img id="logo" src="../assets/img/logo-afpa.webp" href="../index.html" /></a>
+          </li>
+          <li class="nav-item burger">
+            <a class="nav-link" href="Formation.html">Formation DWWM</a>
+          </li>
+          <li class="nav-item burger">
+            <a class="nav-link" href="Contact.html">Contact</a>
+          </li>
+          <li class="nav-item burger">
+            <a class="nav-link" href="References.html">Références</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- END OF HEADER -->
   <div class="container-lg">
     <div class="row p-2 align-items-center">
       <div class="col">
