--- a/views/Temoignage.html
+++ b/views/Temoignage.html
@@ -5,12 +5,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Témoignage</title>
 </head>
 
 <body>
+    <!-- HEADER -->
+    <div id="fondafpa">
+        <img href="index.html" id="logo2" class="d-lg-none d-sm-block" src="../assets/img/logo-afpa.webp" />
+    </div>
+    <nav class="navbar navbar-expand-lg barredenav">
+        <div class="container-fluid text-center">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler border border-3 collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="bi bi-list fs-2"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="container-fluid navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link d-lg-block d-sm-none" aria-current="page" href="#">
+                            <img id="logo" src="../assets/img/logo-afpa.webp" href="../index.html" /></a>
+                    </li>
+                    <li class="nav-item burger">
+                        <a class="nav-link" href="Formation.html">Formation DWWM</a>
+                    </li>
+                    <li class="nav-item burger">
+                        <a class="nav-link" href="Contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item burger">
+                        <a class="nav-link" href="References.html">Références</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- END OF HEADER -->
     <div class="container-lg">
         <div class="card">
             <div class="card-header">
@@ -36,15 +75,33 @@
                     </div>
                 </div>
                 <p></p>
-                <p class="card-text">« Je voulais me former, mais je ne me voyais pas reprendre des études longues… Une formation de 6 mois à l’Afpa, c’était vraiment la solution pour moi ».</p>
-                <p class="card-text">Après avoir occupé des postes dans des métiers différents, Lorine souhaitait continuer sa vie professionnelle dans le milieu administratif. Elle a aujourd’hui trouvé sa voie : « Assistante ressources humaines, c’est le métier qui me convient vraiment ».</p>
-                <p class="card-text">Lorine connaissait déjà bien la fonction publique, et notamment le service qui l’accueille pour son alternance, pour y avoir déjà travaillé en tant qu’assistante de direction.
-                    En intégrant l’Afpa, Lorine a su se créer une nouvelle opportunité… et la voilà revenue en tant qu’alternante !</p>
+                <p class="card-text">« Je voulais me former, mais je ne me voyais pas reprendre des études longues… Une
+                    formation de 6 mois à l’Afpa, c’était vraiment la solution pour moi ».</p>
+                <p class="card-text">Après avoir occupé des postes dans des métiers différents, Lorine souhaitait
+                    continuer sa vie professionnelle dans le milieu administratif. Elle a aujourd’hui trouvé sa voie : «
+                    Assistante ressources humaines, c’est le métier qui me convient vraiment ».</p>
+                <p class="card-text">Lorine connaissait déjà bien la fonction publique, et notamment le service qui
+                    l’accueille pour son alternance, pour y avoir déjà travaillé en tant qu’assistante de direction.
+                    En intégrant l’Afpa, Lorine a su se créer une nouvelle opportunité… et la voilà revenue en tant
+                    qu’alternante !</p>
                 <h5 class="card-title">L’entreprise : un lieu d’expérience !</h5>
-                <p class="card-text">Lorine y exerce des missions diverses et variées : prise de contact, traitement des contrats et des arrêts maladie, gestion des remboursements des frais des agents… Au-delà des tâches régulières et des urgences du quotidien, Lorine est également mobilisée sur un projet à plus long terme, qu’elle a pris en main à son arrivée, et qu’elle suit jusqu’à la fin de son parcours. Ce projet nécessite un réel investissement, et Lorine est fière d’en faire partie : « Sur ce projet, je sais de quoi je parle ! Je peux parler des évolutions, j’ai vécu chaque étape de sa mise en œuvre ».</p>
-                <p class="card-text">Ce qu’elle aime dans son poste, c’est la polyvalence : « Je ne passe jamais une journée à faire la même chose, c’est diversifié et valorisant. Mon lieu d’alternance étant un lieu d’interaction, je développe mes compétences mais aussi mon réseau ».</p>    
-                <p class="card-text">Lorine voit son entreprise comme un lieu d’expérience, qui lui donne la possibilité de mettre en œuvre les connaissances acquises à l’Afpa, mais bien plus encore. Étant souvent en entreprise, Lorine apprécie l’implication de sa formatrice dans son parcours : « 3 semaines en entreprise, une semaine en formation… il faut suivre, mais je suis à jour dans le programme ! ».</p>
-                <p class="card-text">Son conseil à toute personne qui souhaite suivre une formation en alternance ? « Il faut être motivé·e et investi·e, et ne pas avoir peur de vraiment se donner à fond. Ce sont quelques mois de travail qui en valent la peine ».</p>
+                <p class="card-text">Lorine y exerce des missions diverses et variées : prise de contact, traitement des
+                    contrats et des arrêts maladie, gestion des remboursements des frais des agents… Au-delà des tâches
+                    régulières et des urgences du quotidien, Lorine est également mobilisée sur un projet à plus long
+                    terme, qu’elle a pris en main à son arrivée, et qu’elle suit jusqu’à la fin de son parcours. Ce
+                    projet nécessite un réel investissement, et Lorine est fière d’en faire partie : « Sur ce projet, je
+                    sais de quoi je parle ! Je peux parler des évolutions, j’ai vécu chaque étape de sa mise en œuvre ».
+                </p>
+                <p class="card-text">Ce qu’elle aime dans son poste, c’est la polyvalence : « Je ne passe jamais une
+                    journée à faire la même chose, c’est diversifié et valorisant. Mon lieu d’alternance étant un lieu
+                    d’interaction, je développe mes compétences mais aussi mon réseau ».</p>
+                <p class="card-text">Lorine voit son entreprise comme un lieu d’expérience, qui lui donne la possibilité
+                    de mettre en œuvre les connaissances acquises à l’Afpa, mais bien plus encore. Étant souvent en
+                    entreprise, Lorine apprécie l’implication de sa formatrice dans son parcours : « 3 semaines en
+                    entreprise, une semaine en formation… il faut suivre, mais je suis à jour dans le programme ! ».</p>
+                <p class="card-text">Son conseil à toute personne qui souhaite suivre une formation en alternance ? « Il
+                    faut être motivé·e et investi·e, et ne pas avoir peur de vraiment se donner à fond. Ce sont quelques
+                    mois de travail qui en valent la peine ».</p>
             </div>
         </div>
     </div>
