--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,3 +46,19 @@ pre p{
     margin: 20px;
     margin-top: 50px;
 }
+/*CAROUSEL*/
+.carousel-caption h5{
+    color: black;
+    font-size: 30px;
+}
+.carousel-caption p{
+    color: black;
+    font-size: 16px;
+}
+.button{
+    color: blue;
+}
+#carouselExampleCaptions{
+    margin: 50px;
+    margin-bottom: 120px;
+}
