--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,17 @@ pre p{
     margin-bottom: 120px;
     margin-top: 120px;
 }
+#div-comment-613{
+    margin-bottom: 90px;
+    margin: 50px;
+}
+.comment-meta p{
+    font-size: 12px;
+    margin-left: 87px;
+}
+.commentairepage{
+    margin-left: 87px;
+}
+.fn{
+    margin-left: 25px;
+}
