Ajouté le lien témoignage

--- a/views/References.html
+++ b/views/References.html
@@ -45,6 +45,9 @@
           <li class="nav-item burger">
             <a class="nav-link" href="References.html">Références</a>
           </li>
+          <li class="nav-item burger">
+            <a class="nav-link" href="Temoignage.html">Témoignage</a>
+          </li>
         </ul>
       </div>
     </div>
