--- a/views/Temoignage.html
+++ b/views/Temoignage.html
@@ -77,11 +77,15 @@
             <li class="nav-item burger">
               <a class="nav-link" href="References.html">Références</a>
             </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- END OF HEADER -->
+    <!--test commentaire 4-->
     <div class="container-lg">
       <div class="card">
         <div class="card-header">
@@ -166,6 +170,189 @@
             alternance ? « Il faut être motivé·e et investi·e, et ne pas avoir
             peur de vraiment se donner à fond. Ce sont quelques mois de travail
             qui en valent la peine ».
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--5eme commentaire-->
+    <div class="container-lg">
+      <div class="card">
+        <div class="card-header">
+          <h3>Conseillère en insertion professionnelle en apprentissage</h3>
+        </div>
+        <div class="card-body">
+          <div class="row align-items-center">
+            <div class="col">
+              <img
+                src="../assets/img/Juliette.png"
+                class="img-fluid"
+                alt="Lorine Temoignage"
+              />
+            </div>
+            <div class="col-9">
+              <blockquote class="blockquote mb-0">
+                <p>
+                  L’apprentissage, une équipe gagnante entre le maître
+                  d’apprentissage, le formateur et l’apprenti.
+                </p>
+                <footer class="blockquote-footer">
+                  Juliette<cite title="Source Title">, 27 ans</cite>
+                </footer>
+              </blockquote>
+              <p></p>
+              <h5 class="card-title">En bref</h5>
+              <p class="card-text">
+                Déterminée dans son choix de parcours, Juliette, 25 ans, décide
+                de se lancer dans une formation professionnelle pour devenir
+                conseillère en insertion professionnelle au CFA de l'Afpa. Elle
+                nous parle de l'intérêt des échanges entre le maître
+                d'apprentissge, le formateur et elle pour la faire avancer vers
+                son futur métier.
+              </p>
+            </div>
+          </div>
+          <p></p>
+          <p class="card-text">
+            Moi, c’est Juliette, j’ai 25 ans et je suis actuellement conseillère
+            en insertion professionnelle au CFA de l’Afpa. Je suis titulaire
+            d’un bac +3, un bachelor de gestion de projet humanitaire que j’ai
+            passé il y a quelques années déjà. Après je me suis réorienté au fur
+            et à mesure vers le milieu du travail social. C’est là que j’ai
+            trouvé mon métier actuel et la formation à l’Afpa.
+          </p>
+          <p class="card-text">
+            Mon métier consiste à accompagner des personnes qui sont considérées
+            comme éloignées de l'emploi. Les accompagner, c’est à la fois
+            travailler sur la partie sociale de leur situation et après de
+            construire et élaborer un projet professionnel avec eux. J’ai
+            découvert ce métier un peu par hasard. J’ai découvert l’Afpa en
+            cherchant une formation après que mon directeur, donc mon maître
+            d’apprentissage actuel, m'a proposé de me former.
+          </p>
+          <p class="card-text">
+            Au CFA de l’Afpa, il n’y a pas vraiment de journée type. On va faire
+            différents travaux pour arriver à acquérir les connaissances
+            nécessaires. Parfois, on fait des études de cas, on travaille chacun
+            de notre côté et après on restitue en groupe. Par exemple,
+            concernant le titre de conseiller en insertion professionnelle ça va
+            être une simulation d’entretien ou la simulation de l'animation
+            d'une réunion d’information collective que l'on on va préparer de
+            notre côté et après faire la démonstration devant les autres
+            apprenants.
+          </p>
+          <p class="card-text">
+            Le format d'apprentissage en centre Afpa diffère de l'université
+            dans le sens où en université, nous sommes des groupes beaucoup plus
+            importants en formation. Là-bas on est une trentaine de personnes
+            ici on est une dizaine, ce qui permet une relation privilégiée à la
+            fois avec le formateur et avec les collègues apprenants. Donc,
+            l’échange entre le formateur, le maître d’apprentissage et moi,
+            c’est vraiment un travail en trinôme. Avec le formateur, on échange
+            principalement pendant ma période de formation et lui va surtout
+            échanger avec notre tuteur ou notre maître d’apprentissage pour lui
+            fair part des besoins qu’on a vis-à-vis de la formation : ce que
+            l’on doit travailler en entreprise, soit pour progresser, soit pour
+            valider un titre. L'apprentissage, en un mot, ce serait pour moi la
+            professionnalisation !
+          </p>
+          <p class="card-text">
+            Ce qu’elle aime dans son poste, c’est la polyvalence : « Je ne passe
+            jamais une journée à faire la même chose, c’est diversifié et
+            valorisant. Mon lieu d’alternance étant un lieu d’interaction, je
+            développe mes compétences mais aussi mon réseau ».
+          </p>
+          <p class="card-text">
+            Lorine voit son entreprise comme un lieu d’expérience, qui lui donne
+            la possibilité de mettre en œuvre les connaissances acquises à
+            l’Afpa, mais bien plus encore. Étant souvent en entreprise, Lorine
+            apprécie l’implication de sa formatrice dans son parcours : « 3
+            semaines en entreprise, une semaine en formation… il faut suivre,
+            mais je suis à jour dans le programme ! ».
+          </p>
+          <p class="card-text">
+            Son conseil à toute personne qui souhaite suivre une formation en
+            alternance ? « Il faut être motivé·e et investi·e, et ne pas avoir
+            peur de vraiment se donner à fond. Ce sont quelques mois de travail
+            qui en valent la peine ».
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--6eme commentaire-->
+    <div class="container-lg">
+      <div class="card">
+        <div class="card-header">
+          <h3>
+            Une formation dans la comptabilité pour être immédiatement
+            opérationnel
+          </h3>
+        </div>
+        <div class="card-body">
+          <div class="row align-items-center">
+            <div class="col">
+              <img
+                src="../assets/img/nathalie.jpg"
+                class="img-fluid"
+                alt="Lorine Temoignage"
+              />
+            </div>
+            <div class="col-9">
+              <blockquote class="blockquote mb-0">
+                <p>En formation Comptabilité à l'Afpa d'Istres</p>
+                <footer class="blockquote-footer">
+                  Nathalie<cite title="Source Title">, 59 ans</cite>
+                </footer>
+              </blockquote>
+              <p></p>
+              <h5 class="card-title">En bref</h5>
+              <p class="card-text">
+                Elle est concentrée. A 59 ans, Nathalie Theron est en
+                reconversion professionnelle à l’Afpa pour devenir Assistante
+                comptable. Cette stagiaire a déjà vécu une première vie avec un
+                CAP esthétique et un CAP comptabilité. Elle a également été,
+                durant de nombreuses années, cheffe de cuisine. Mais, «au bout
+                d’un moment, les horaires de travail étaient éprouvants et je
+                voulais finir ma carrière professionnelle tranquillement. C’est
+                pour cela que je suis retournée à mes fondamentaux».
+              </p>
+            </div>
+          </div>
+          <p></p>
+          <p class="card-text">
+            “Elle a choisi cette formation car elle sait qu’il y a beaucoup de
+            possibilités d’embauche et, de plus, elle avait de très bonnes bases
+            dans ce domaine” explique sa formatrice Florine Vercher.
+          </p>
+          <p class="card-text">
+            “La ou le comptable assure la bonne santé de l’entreprise et c’est
+            un métier avec beaucoup de responsabilités, par exemple, on peut
+            conseiller la hiérarchie sur les dépenses et surtout faire évoluer
+            les chiffres de la société” détaille l’experte de l’Afpa. “Les
+            stagiaires ont donc sept mois pour apprendre à collecter toutes les
+            informations concernant l’entreprise au niveau des finances et de la
+            gestion, les bilans à établir et tout ce qui fait le métier de
+            comptable. Durant la formation, il y a également un mois de période
+            d’application dans une entreprise ».
+          </p>
+          <p class="card-text">
+            Nathalie se montre très élogieuse envers l’Afpa et sa formatrice : «
+            le centre est super, il y a une bonne entente entre les stagiaires.
+            Florine, notre formatrice, nous propose des ateliers et des
+            exercices de qualités et nous laisse beaucoup en autonomie afin
+            d’être le plus opérationnel possible et apprendre dans des
+            conditions très proches de la réalité ».
+          </p>
+          <p class="card-text">
+            Dans la continuité de cette formation, une fois son titre
+            professionnel obtenu, elle souhaite trouver rapidement un poste qui
+            lui permettra de mettre en pratique tout ce qu’elle aura appris
+            durant sa formation.
+          </p>
+          <p class="card-text">
+            La formatrice souligne d’ailleurs que l’expérience de sa stagiaire
+            “va lui permettra de trouver rapidement un poste. Car les
+            entreprises recrutent actuellement pour leurs services comptables.
+            Et Nathalie démontre toutes les qualités requises et recherchées !”
           </p>
         </div>
       </div>
