--- a/views/Contact.html
+++ b/views/Contact.html
@@ -79,6 +79,9 @@
             <li class="nav-item burger">
               <a class="nav-link" href="References.html">Références</a>
             </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -87,8 +90,8 @@
     <div class="container-lg">
       <form>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
+          <label id="adressemail" for="exampleInputEmail1" class="form-label"
+            >Adresse e-mail</label
           >
           <input
             type="email"
@@ -131,5 +134,17 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
+    <footer class="mt-auto">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a
+            class="navbar-brand"
+            href="https://www.afpa.fr/actualites/mentions-legal-1"
+            >Mentions légales</a
+          >
+          <a class="navbar-brand" href="#">Copyright</a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
