--- a/views/Formation.html
+++ b/views/Formation.html
@@ -72,61 +72,66 @@
             <li class="nav-item burger">
               <a class="nav-link" href="../views/References.html">Références</a>
             </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <!--2eme texte-->
     <pre>
       <p>
-        Qui sommes nous ?
+Présentation de la formation DWWM (Développeur Web & Web Mobile)
+
+        Le métier:
+Il entre dans les coulisses du web, se faufile parmi les serveurs, connait un langage que seuls ses pairs pratiquent. Le développeur logiciel connaît la face cachée du web. Il code, teste, complète un cahier des charges, modélise. Sans lui, point de site de contenu, d’ e-commerce ou d’application.
+
+Appelé aussi : développeur web,développeur web front-end developpeur back-end, developpeur full-stack,développeur web mobiles,informaticien de développement.
 
 
-        Devenu établissement public de l’État à caractère industriel et commercial (EPIC) depuis le 1er janvier 2017, l’AFPA contribue au sein du service public de l’emploi à :
+Objectifs de la formation
+- Développer la partie front-end d’une application web ou web mobile en intégrant les recommandations de sécurité
 
-la formation et à la qualification des personnes les plus éloignées de l’emploi et à leur insertion sociale et professionnelle ;
-la politique de certification menée par l’État dont le ministre chargé de l’emploi ;
-l’égal accès des femmes et des hommes à la formation professionnelle et à la promotion de la
-mixité des métiers ;
-l’égal accès, sur l’ensemble du territoire, aux services publics de l’emploi et de la formation
-professionnelle.
-Missions de l’AFPA
-Au titre des missions de service public qui lui sont confiées par l’État et dans le respect des compétences des régions chargées du service public régional de la formation professionnelle, l’AFPA assure des missions de :
+- Développer la partie back-end d’une application web ou web mobile en intégrant les recommandations de sécurité
+      
 
-conception et d’ingénierie des titres du ministère chargé de l’emploi (235 titres) et d’autres ministères ;
-développement d’une ingénierie de formation adaptée aux besoins permettant de répondre à l’émergence et à l’organisation de nouveaux métiers et de nouvelles compétences ;
-expertise prospective de l’évolution des compétences adaptées au marché local de l’emploi ;
-appui aux opérateurs chargés des activités de conseil en évolution professionnelle.
-En qualité d’organisme de formation, l’AFPA dispense des formations ouvertes aux demandeurs d’emploi et aux salariés pour favoriser le retour à l’emploi, l’accès à un premier emploi, et le développement des compétences pour le maintien ou l’évolution dans l’emploi.
-En 2016, l’AFPA a formé 140 000 personnes dont 80 000 demandeurs d’emploi principalement sur des formations qualifiantes et 44 500 personnes ont obtenu au titre du ministère chargé de l’emploi.
+Nos résultats pour cette formation pour l'année 2021:
 
-Gouvernance de l’AFPA
-La gouvernance de l’AFPA se caractérise par son quadripartisme.
+- 73,05% de réussite au titre professionnel
+- 45,25% d'accès à l'emploi dans les 6 mois
+- 64,74% de stagiaires satisfaits
 
-Son conseil d’administration est composé de :
 
-9 représentants de l’État ;
-4 représentants élus des Conseils régionaux ;
-5 représentants des organisations syndicales de salariés représentatives au niveau national et interprofessionnel ;
-3 représentants des organisations professionnelles d’employeurs représentatives au niveau national et interprofessionnel ;
-2 représentants du personnel ;
-4 personnalités qualifiées.
-Le Président du conseil d’administration est nommé parmi les personnalités qualifiées.
-Le Conseil d’administration règle les affaires de l’établissement et à ce titre, il définit, notamment, les orientations stratégiques annuelles et pluriannuelles de l’agence, vote le budget initial et les comptes annuels.
+Formation qualifiante, en centre.
 
-Afin d’assister le président du conseil d’administration et le directeur général dans la conduite de l’établissement, sont institués au sein du conseil d’administration :
+Durée :
+8 mois environ (1 190 heures).
+Durées indicatives et ajustables en fonction des besoins des personnes.
 
-Un comité d’audit ;
-Un comité stratégique ;
-Un comité des nominations et des rémunérations.
-Organisation de l’AFPA
+Prix (net de taxe) :
+10 584 €
+Le prix de la formation est donné à titre indicatif. Des prises en charges totales ou partielles sont possibles en fonction des financements des entreprises ou de partenaires.
 
-Sous l’égide du directeur général, nommé par décret sur proposition conjointe des ministres de tutelle, l’organisation territoriale de l’AFPA se décline sur trois niveaux :
+Validation visée :
+Titre professionnel de niveau 5  (BTS/DUT) de développeur/se Web et Web mobile
 
-Une direction générale dont le siège se situe à Montreuil ;
-13 directions régionales ;
-158 centres de formation répartis sur tout le territoire métropolitain. Rechercher un centre AFPA.
-L’AFPA compte 8 277 ETP.
-      </p>
+
+Pour connaitre les passerelles vers d'autres certifications, consultez le site internet de France Compétences.
+</p>
     </pre>
+    <footer class="mt-auto">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a
+            class="navbar-brand"
+            href="https://www.afpa.fr/actualites/mentions-legal-1"
+            >Mentions légales</a
+          >
+          <a class="navbar-brand" href="#">Copyright</a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
