--- a/views/References.html
+++ b/views/References.html
@@ -78,6 +78,9 @@
             <li class="nav-item burger">
               <a class="nav-link" href="References.html">Références</a>
             </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -196,5 +199,17 @@
         </div>
       </div>
     </div>
+    <footer class="mt-auto">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a
+            class="navbar-brand"
+            href="https://www.afpa.fr/actualites/mentions-legal-1"
+            >Mentions légales</a
+          >
+          <a class="navbar-brand" href="#">Copyright</a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
