--- a/views/Formation.html
+++ b/views/Formation.html
@@ -84,7 +84,7 @@
     </nav>
 
     <!--2eme texte-->
-    <pre>
+    <pre class="grostexte">
       <p>
 Présentation de la formation DWWM (Développeur Web & Web Mobile)
 
