--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
 #fondafpa{
     background-color: #44A33D;
 }
-pre p{
+.grostexte{
     font-size: 22px;
     white-space: break-spaces;
     text-align: justify;
@@ -94,4 +94,19 @@ iframe{
 .container-lg{
     margin-bottom: 40px;
     margin-top: 40px;
+}
+#bordure{
+    font-size: 22px;
+    white-space: break-spaces;
+    text-align: justify;
+    justify-content: space-evenly;
+    display: flex;
+    border-color: #86BD24;
+    border-width: 4px;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 10px;
+    width: auto;
+    margin: 20px;
+    margin-top: 50px;
 }
