--- a/views/Contact.html
+++ b/views/Contact.html
@@ -147,23 +147,23 @@
           <img src="../assets/img/tel-3639.png" class="img-fluid tel3936" alt="Tèlephone">
           <h3 class="my-4">Les horaires :</h3>
           <div class="row">
-            <div class="col-2">lundi :</div>
+            <div class="col-lg-2 col-sm-5">lundi :</div>
             <div class="col">08h00 - 12h00 /13h00 - 17h00</div>
           </div>
           <div class="row">
-            <div class="col-2">mardi :</div>
+            <div class="col-lg-2 col-sm-5">mardi :</div>
             <div class="col">08h00 - 12h00 /13h00 - 17h00</div>
           </div>
           <div class="row">
-            <div class="col-2">mercredi :</div>
+            <div class="col-lg-2 col-sm-5">mercredi :</div>
             <div class="col">08h00 - 12h00 /13h00 - 17h00</div>
           </div>
           <div class="row">
-            <div class="col-2">jeudi :</div>
+            <div class="col-lg-2 col-sm-5">jeudi :</div>
             <div class="col">08h00 - 12h00 /13h00 - 17h00</div>
           </div>
           <div class="row">
-            <div class="col-2">vendredi :</div>
+            <div class="col-lg-2 col-sm-5">vendredi :</div>
             <div class="col">08h00 - 12h00</div>
           </div>
         </div>
