ajout bordure partie commentaires

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,3 +110,8 @@ iframe{
     margin: 20px;
     margin-top: 50px;
 }
+#commentaires{
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
